🐞 fix: fix z-index

--- a/src/index.css
+++ b/src/index.css
@@ -36,5 +36,4 @@ cooky-translator {
   right: -20px;
   top: 60px;
   background: radial-gradient(20px at 20px 40px, #00000000 20px, #bfdbfe 20px);
-  z-index: -1;
 }
